<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="425dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/banner_serie"
        android:cropToPadding="true"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="126dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/season"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="Selecionar Temporadas"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/prime"
        android:textColor="@color/blue_button"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        android:text="@string/season_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/blue_button"
        android:drawableStart="@android:drawable/ic_media_play"
        android:text="@string/watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="116dp"
        android:layout_height="115dp"
        android:background="@drawable/ic_watchlist_foreground"
        android:backgroundTint="#FAF4F4"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="527dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_complete_foreground"
        android:backgroundTint="#DDD6D6"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="527dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:background="@drawable/ic_share_foreground"
        android:backgroundTint="#EDE1E1"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="537dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textColor="@color/grey"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="618dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchlist"
        android:textColor="@color/grey"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="618dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/grey"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="619dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="372dp"
        android:layout_height="122dp"
        android:text="@string/desc"
        android:textColor="@color/grey"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="675dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cast_foreground"
        android:backgroundTint="#B3ADAD"
        android:backgroundTintMode="src_in"
        tools:layout_editor_absoluteX="314dp"
        tools:layout_editor_absoluteY="747dp" />

</androidx.constraintlayout.widget.ConstraintLayout>